# bourbonbook

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  compose.yaml  plan.md  pyproject.toml  run-docker.sh
.codex/: hooks.json
.codex/agents/: bourbonbook-reviewer.toml  pr-validator.toml
.codex/hooks/: pre_tool_guard.py
.continue/mcpServers/: new-mcp-server.yaml
.github/workflows/: ci.yml  docker-publish.yml
bourbonbook/: __init__.py  admin_cli.py  admin_config.py  analysis.py  auth.py  benchmark_cli.py  catalog.py  catalog_cli.py  catalog_extract.py  catalog_import_worker.py  catalog_imports.py  catalog_uploads.py  config.py  database.py  email.py  entrypoint.py  identity.py  logging_config.py  main.py  migrations.py  model_evaluation.py  models.py  observability.py  ollama.py  openai_provider.py  photos.py  provider_clients.py  qdrant_prices.py  rate_limit.py  tokens.py
bourbonbook/static/: app.css  app.js  manifest.webmanifest  sw.js
bourbonbook/templates/: _collection_header.html  _compact_grid.html  _mobile_nav.html  account_deleted.html  base.html  check_email.html  compact.html  detail.html  edit.html  forgot_password.html  library.html  login.html  new.html  profile.html  reset_password.html  shared_collection.html  shopping_list.html  verify_email.html
docs/: Initial-plan.md  Phase 2 Updates.md  admin-upload-phase2-plan.md  admin-upload-plan.md  ai-performance-plan.md  phase-1-1070ti-implementation-plan.md  todo.md
docs/adr/: plan.md  (+3 more)
migrations/: env.py
scripts/: docker_build.py  evaluate_ollama.py  extract_catalog_screenshots.py  pr_review.py  pre_commit_check.py
tests/: test_account_flows.py  test_admin.py  test_analysis.py  test_app.py  test_benchmark_cli.py  test_catalog.py  test_catalog_extract.py  test_catalog_import_worker.py  test_catalog_imports.py  test_catalog_uploads.py  test_docker_build.py  test_docker_publish_workflow.py  test_evaluation.py  test_identity.py  test_logging.py  test_metrics.py  test_migrations.py  test_model_evaluation.py  test_observability.py  test_ollama.py  test_openai_provider.py  test_pr_review.py  test_profile.py  test_qdrant_prices.py  test_quality_routes.py  test_rate_limit.py  test_runtime_boundaries.py  test_tokens.py
(+36 files in other folders)
