[project]
name = "bourbon-book"
version = "0.1.0"
description = "A private, photo-first bourbon collection PWA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "itsdangerous>=2.2,<3",
  "jinja2>=3.1,<4",
  "pillow>=11,<13",
  "pwdlib[argon2]>=0.3,<1",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
