[project]
name = "bourbon-book"
version = "0.1.0"
description = "A private, photo-first bourbon collection PWA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "itsdangerous>=2.2,<3",
  "jinja2>=3.1,<4",
  "openai>=1.93,<3",
  "pillow>=11,<13",
  "pymupdf>=1.26,<2",
  "prometheus-client>=0.22,<1",
  "pwdlib[argon2]>=0.3,<1",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "bandit[toml]>=1.8,<2",
  "pip-audit>=2.9,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
source = ["bourbonbook"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
exclude_also = [
  # Static type-checking imports are deliberately not executable at runtime.
  "if TYPE_CHECKING:",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.bandit]
exclude_dirs = ["tests"]
# The production container must bind its internal service port on all interfaces so Docker can
# route traffic to it. Host exposure remains controlled by the deployment network configuration.
skips = ["B104"]
